fix: fix controller, apperror, and response for logout feature
